--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 env_logger = "0.8.3"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3.3"
 
 [[bin]]
 name = "server"
