--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ env_logger = "0.8.3"
 toml = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
+bytes = "1"
+sled = "0.34.6"
+uuid = {version = "0.8.2" ,features = ["serde", "v4"]}
 
 [[bin]]
 name = "server"
